# probable-pancake

./: .env.example  .gitignore  Procfile  README.md  alembic.ini  pyproject.toml  setup.cfg  setup.py
app/: database.py  main.py  models.py  oauth2.py  schemas.py
app/application/account/: __init__.py  account_services.py  delete_user_services.py  get_user_services.py  register_user_services.py  update_user_services.py
app/application/authentication/: __init__.py  authentication_services.py
app/application/comments/: __init__.py  comments_services.py
app/application/posts/: __init__.py  posts_services.py
app/application/topic/: __init__.py  topic_services.py
app/application/vote/: vote_services.py
app/core/: app.py  config.py  server.py
app/domain/accounts/entities/: user.py
app/domain/accounts/interfaces/: __init__.py  user_repo.py
app/domain/accounts/protocols/: __init__.py
app/domain/comments/entities/: comments.py
app/domain/comments/interfaces/: __init__.py  comment_repo.py
app/domain/posts/: posts.py
app/domain/posts/entities/: posts.py
app/domain/posts/interfaces/: __init__.py  posts_repo.py
app/domain/topic/entities/: topic.py
app/domain/topic/interfaces/: __init__.py  topic_repo.py
app/domain/vote/entities/: vote.py
app/infra/database/: base.py  sqlalchemy.py
app/infrastructure/database/: base.py  sqlalchemy.py
app/infrastructure/framework/: app.py  config.py  server.py
app/presentation/: container.py
app/presentation/api/: __init__.py
app/routers/: authentication.py  post.py  user.py
scripts/: __init__.py
(+51 files in other folders)
